# archonv1

./: .env.example  .gitattributes  .gitignore  Archon_Academy_Reference.docx  BUILD_PLAN.md  CONTRIBUTING.md  CURSOR_AGENT.md  DEFINITION_OF_DONE.md  DISCOVERY_GUIDE.md  GETTING_STARTED.md  GITOPS_GUIDE.md  LICENSE  README.md  ROADMAP.md  SCHEMA.md  SHOW_HN_DRAFT.md  docker-compose.yml  git_init.bat  git_init.ps1  install.py  wrangler.jsonc
.github/: PULL_REQUEST_TEMPLATE.md
academy/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
archon-cli/: pyproject.toml  sample_plan.json  sample_validate_report.json  test_run.py
archon-cli/archon_cli/: __init__.py  azure_helpers.py  azure_tf_map.py  azure_validate.py  compliance.py  cost.py  discover.py  discover_extended.py  discover_palette.py  formatters.py  gcp_helpers.py  gcp_validate.py  main.py  onprem_helpers.py  onprem_validate.py  validate.py
archon-cli/archon_cli/data/: pricing_db.json
archon-cli/pytest-cache-files-_pqa70tb/v/cache/: nodeids
archon-cli/scripts/: build_pricing_db.py  count_gcp_rules.py  list_gcp_rules.py
archon-cli/tests/: test_azure_tf_plan.py  test_azure_validate.py  test_cost.py  test_discover.py  test_gcp_validate.py  test_gitops.py  test_onprem_validate.py  test_palette_coverage.py  test_validate.py
backend/: .dockerignore  Dockerfile  cron_license.py  entrypoint.sh  pyproject.toml  requirements.txt  seed.py  seed_assignments.py  seed_institutional.py  seed_library.py  seed_license.py  seed_master.py  seed_modules.py  simulate_stripe_checkout.py
(+766 files in other folders)
