[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archon-cli"
version = "0.1.0"
description = "Standalone CLI for Archon Pro - validate, cost-diff, and discover AWS infrastructure"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
]

[project.scripts]
archon-cli = "archon_cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[ec2,s3,rds,lambda,elbv2,ecs,eks,sqs,sns,dynamodb,iam,cloudwatch,route53,elasticache,kms,efs,autoscaling]>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["archon_cli*"]

[tool.setuptools.package-data]
archon_cli = ["data/*.json"]
